--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -31,35 +31,35 @@ DIRECTORY_ODDS = R:/odds/
 DIRECTORY_ODDSMONITOR = R:/oddsmonitor/
 
 #MLのalgorithm定義ファイル
-file_algorithm=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/algorithm.tsv
+file_algorithm=C:/Dev/github/pod_boatrace/properties/expr10/algorithm.tsv
 
 #MLのclass定義ファイル
-file_class=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/class.tsv
+file_class=C:/Dev/github/pod_boatrace/properties/expr10/class.tsv
 
 #MLの実験定義ファイル
-file_model_config=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/model_config.tsv
+file_model_config=C:/Dev/github/pod_boatrace/properties/expr10/model_config.tsv
 
 #MLのfeature定義ファイル
-file_features=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/features.tsv
+file_features=C:/Dev/github/pod_boatrace/properties/expr10/features.tsv
 
 #MLの実験定義ファイル
-#file_result_config=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/result_config.tsv
+#file_result_config=C:/Dev/github/pod_boatrace/properties/expr10/result_config.tsv
 
 #MLの実験定義ファイル(Excel) filepath#sheet
 # 이 설정값은 변경하지 말것 result_config.xlsx에만 정의할 것 (번호혼선 방지를 위해)
-file_result_config=C:/Dev/workspace/Oxygen/pod_boatrace/document/expr10/result_config.xlsx#result
+file_result_config=C:/Dev/github/pod_boatrace/document/expr10/result_config.xlsx#result
 
 #MLのpattern定義ファイル
-file_pattern=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/pattern.tsv
+file_pattern=C:/Dev/github/pod_boatrace/properties/expr10/pattern.tsv
 
 #result生成時のベッティング方式を定義
-file_strategy=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/strategy.tsv
+file_strategy=C:/Dev/github/pod_boatrace/properties/expr10/strategy.tsv
 
 #feature set定義ファイル
-file_featureset=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/featureset.tsv
+file_featureset=C:/Dev/github/pod_boatrace/properties/expr10/featureset.tsv
 
 #java実行時のクラスパス
-classpath=C:/Dev/workspace/Oxygen/pod_boatrace_test/lib/weka.jar;C:/Dev/workspace/Oxygen/pod_boatrace/target/classes;
+classpath=C:/Dev/workspace/Oxygen/pod_boatrace_test/lib/weka.jar;C:/Dev/github/pod_boatrace/target/classes;
 
 target_db_resource=mybatis-config.0.xml
 
@@ -79,7 +79,7 @@ dir_model_release=D:/Dev/experiment/expr10/model_release/
 dir_result=D:/Dev/experiment/expr10/result/
 
 # sqlファイルをscanする対象ディレクトリ
-dir_sql=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/
+dir_sql=C:/Dev/github/pod_boatrace/properties/expr10/
 
 # sqlファイルリスト（コンマ区分）
 files_sql=sqls_1.sql
@@ -100,7 +100,7 @@ websocket_url_python=ws://localhost:8091
 # pythonサーバー用のモデル情報ファイル
 # classId::algorighmid::features
 # ex) 00005_rank1=r1_123456::cf_lgbm-1_py::en1,en2,en3,nw4,nw5,nw6::category,category,category,float,float,float
-file_model_info=C:/Dev/workspace/Oxygen/pod_boatrace/properties/expr10/model.properties
+file_model_info=C:/Dev/github/pod_boatrace/properties/expr10/model.properties
 
 # pythonサーバーlogging定義ファイル
 file_python_log_config=C:/Dev/workspace/Oxygen/py_boatrace/log_config.json
@@ -136,7 +136,7 @@ BET_3F=100
 
 ##1 or 2 or online
 ## 1=test 2=最終 3=実践
-simulation_step=2
+simulation_step=1
 
 # ResultStatを生成する単位  bettype, prediction, pattern, unified
 #stat_unit=bettype
@@ -144,25 +144,26 @@ stat_unit=bettype,prediction,pattern
 
 ##------------- simulation step 1 
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-#file_simul_config_step1=C:/Dev/workspace/Oxygen/pod_boatrace/document/expr10/simul1_test.xlsx#test
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
 #dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
-file_simul_config_step1=C:/Dev/workspace/Oxygen/pod_boatrace/document/expr10/result_config6.xlsx#simul3_2_FBI
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul3_2_FBI/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI/
 
-dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/simul3_2_FBI/
+dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
-# 20220914 EvaluationFileLoader or EvaluationSimul2Loader or EvaluationSimulExcelLoader or EvaluationSimul3Loader
-evaluation_loader=EvaluationFileLoader
+# 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
+# EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr
+evaluation_loader=EvaluationSimulLoaderPr
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
 
 #groupシミュレーションをexcelで定義
-file_group_config_step1=C:/Dev/workspace/Oxygen/pod_boatrace/document/expr10/simul1_group.xlsx#groups
+file_group_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_group.xlsx#groups
 
 ##------------- simulation step 2
 #MLのシミュレーション最終定義ファイル(Excel) filepath#sheet
-file_simul_config_step2=C:/Dev/workspace/Oxygen/pod_boatrace/document/expr10/simul1_test.xlsx#last
+file_simul_config_step2=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#last
 dir_simul_output_step2=D:/Dev/experiment/expr10/simulation_step2/
 dir_groups_step2=D:/Dev/experiment/expr10/groups_step2/
 
@@ -196,7 +197,9 @@ split=1
 result_sql_id=s-all
 groups=0
 pattern_id=x
+# count or literal
 pattern_type=count
+# mod, ptid, ptn
 pattern_fields=ptn
 range_selector=x
 bonus_pr=x
@@ -211,6 +214,7 @@ pattern_selector=x
 prediction_selector=x
 min_betrate=0
 min_betcnt=0
+min_incomerate=0
 
 # 20221112追加
 factor=x
