--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -146,14 +146,14 @@ stat_unit=bettype,prediction,pattern
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
 #file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
 #dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI-2
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI-2/
 
 dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
 # 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
-# EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr
-evaluation_loader=EvaluationSimulLoaderPr
+# EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr or EvaluationSimulLoaderPtnId
+evaluation_loader=EvaluationSimulLoaderPtnId
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
@@ -188,7 +188,7 @@ chart_size_y=700
 graph_only_count_all=yes
 
 # 2022/9/12 시계열 그래프를 베팅단위가 아닌 지정기간단위로 출력한다. 0=베팅단위, 0이외=지정기간단위
-term_days=1
+term_days=0
 
 ############# simulation定義を簡略化する。 2022/8/5
 probability_type=digit1
@@ -200,7 +200,7 @@ pattern_id=x
 # count or literal
 pattern_type=count
 # mod, ptid, ptn
-pattern_fields=ptn
+pattern_fields=mod+ptid
 range_selector=x
 bonus_pr=x
 bonus_bor=x
@@ -264,5 +264,5 @@ term_663_2=20211201~20220531
 term_663_3=20220601~20220831
 
 term_1232_1=20210602~20220531
-term_1232_2=20220601~20220830
+term_1232_2=20220601~20221031
 term_1232_3=20220901~20221031
