--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -112,7 +112,7 @@ odds_monitoring_start_ymd=20210602
 
 ############# rmi data server定義
 # simulationデータ提供対象期間
-dataserver_simulation_period=20210602~20221031
+dataserver_simulation_period=20180601~20221031
 dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
@@ -263,6 +263,7 @@ term_663_1=20210602~20211130
 term_663_2=20211201~20220531
 term_663_3=20220601~20220831
 
+term_1232_0=20180601~20210601
 term_1232_1=20210602~20220531
 term_1232_2=20220601~20221031
 term_1232_3=20220901~20221031
