--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -144,10 +144,10 @@ stat_unit=bettype,prediction,pattern
 
 ##------------- simulation step 1 
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
-#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI-2
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI-2/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI-2
+#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI-2/
 
 dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
@@ -188,7 +188,7 @@ chart_size_y=700
 graph_only_count_all=yes
 
 # 2022/9/12 시계열 그래프를 베팅단위가 아닌 지정기간단위로 출력한다. 0=베팅단위, 0이외=지정기간단위
-term_days=0
+term_days=1
 
 ############# simulation定義を簡略化する。 2022/8/5
 probability_type=digit1
@@ -265,5 +265,5 @@ term_663_3=20220601~20220831
 
 term_1232_0=20180601~20210601
 term_1232_1=20210602~20220531
-term_1232_2=20220601~20221031
+term_1232_2=20220601~20220830
 term_1232_3=20220901~20221031
