--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -112,14 +112,14 @@ odds_monitoring_start_ymd=20210602
 
 ############# rmi data server定義
 # simulationデータ提供対象期間
-dataserver_simulation_period=20180601~20221031
+dataserver_simulation_period=20180601~20221130
 dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
 bettype=1T,2T,3T,2F,3F
 
 # classification data 取得対象のmodelnoリスト
-dataserver_classification_models=99080,99083,99100,99102,99103,98080,98083,98100,98102,98103
+dataserver_classification_models=99080,99083,99100,99102,99103,97080,97083,97100,97102,97103
 #dataserver_classification_models=99080,99083
 
 # rmi接続情報
@@ -144,12 +144,14 @@ stat_unit=bettype,prediction,pattern
 
 ##------------- simulation step 1 
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
-#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_1_FPI-2
-#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_1_FPI-2/
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
+#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
+#dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store_test/
 
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_3_FPI-2
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_3_FPI-2/
 dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
+
 
 # 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
 # EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr or EvaluationSimulLoaderPtnId
@@ -267,3 +269,12 @@ term_1232_0=20180601~20210601
 term_1232_1=20210602~20220531
 term_1232_2=20220601~20220830
 term_1232_3=20220901~20221031
+term_1232_12=20210602~20220830
+term_1232_23=20220601~20221031
+term_1232_123=20210602~20221031
+
+term_8820=20180601~20210601
+term_882_1=20210602~20220131
+term_882_2=20220201~20220930
+term_882_3=20221001~20221130
+
