--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -180,7 +180,7 @@ pr_min=0.01
 pr_max=1
 
 graph_type=7
-save_stat=yes
+save_stat=no
 save_graph=yes
 save_result=no
 chart_size_x=700
@@ -277,4 +277,8 @@ term_8820=20180601~20210601
 term_882_1=20210602~20220131
 term_882_2=20220201~20220930
 term_882_3=20221001~20221130
+
+term_666_1=20210602~20211130
+term_666_2=20211201~20220531
+term_666_3=20220601~20221130
 
