--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -107,6 +107,9 @@ file_python_log_config=C:/Dev/workspace/Oxygen/py_boatrace/log_config.json
 
 file_python_log=C:/Dev/workspace/Oxygen/pod_boatrace_test/logs/python/{}.log
 
+#ヒストグラム分割
+file_histogram_values=C:/Dev/github/pod_boatrace/properties/expr10/histogram_values.properties
+
 # オッズを直前まで取得して直前オッズやオッズ予測が可能な開始日付(OddsMonitorManagerで使用)
 odds_monitoring_start_ymd=20210602
 
@@ -144,18 +147,19 @@ stat_unit=bettype,prediction,pattern
 
 ##------------- simulation step 1 
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test7
 #dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_test/
 #dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store_test/
 
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_3_FPI-2
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_3_FPI-2/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul3_2_FBI
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul3_2_FBI/
 dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
 
 # 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
-# EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr or EvaluationSimulLoaderPtnId
-evaluation_loader=EvaluationSimulLoaderPtnId
+# EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr 
+# or EvaluationSimulLoaderPtnId or EvaluationSimulLoaderResultGraphFilename
+evaluation_loader=EvaluationSimulLoaderResultGraphFilename
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
@@ -179,8 +183,7 @@ rork_max=30
 pr_min=0.01
 pr_max=1
 
-graph_type=7
-save_stat=no
+save_stat=yes
 save_graph=yes
 save_result=no
 chart_size_x=700
@@ -188,9 +191,19 @@ chart_size_y=700
 
 # 2022/7/30 simul_1확인시 시간절약을 위해 !all그래프 한개만 출력하게한다. count/ptn
 graph_only_count_all=yes
+# 2023/1/11 simul_1이면서 pattern단위 출력일 때, all출력은 생략하려고.
+graph_only_pattern=yes
 
-# 2022/9/12 시계열 그래프를 베팅단위가 아닌 지정기간단위로 출력한다. 0=베팅단위, 0이외=지정기간단위
-term_days=30
+
+# 2022/9/12 시계열 그래프를 베팅단위가 아닌 지정기간단위로 출력한다.
+# 1=분할result 2=분할simulation(bork포함) 3=단일simulation
+graph_type=1
+term_days_balance=30
+term_days_performance=30
+#term_days_balance=15
+#term_days_performance=15
+term_split=2
+
 
 ############# simulation定義を簡略化する。 2022/8/5
 probability_type=digit1
@@ -202,7 +215,7 @@ pattern_id=x
 # count or literal
 pattern_type=count
 # mod, ptid, ptn
-pattern_fields=mod+ptid
+pattern_fields=ptn
 range_selector=x
 bonus_pr=x
 bonus_bor=x
@@ -217,6 +230,8 @@ prediction_selector=x
 min_betrate=0
 min_betcnt=0
 min_incomerate=0
+# min_incomerateを範囲に変えた（result_config#4161から）
+incomerate_range=-1~99
 
 # 20221112追加
 factor=x
@@ -273,12 +288,19 @@ term_1232_12=20210602~20220830
 term_1232_23=20220601~20221031
 term_1232_123=20210602~20221031
 
+term_1252_2=20220601~20221031
+
 term_8820=20180601~20210601
 term_882_1=20210602~20220131
 term_882_2=20220201~20220930
 term_882_3=20221001~20221130
 
+term_666_0=20180601~20210601
 term_666_1=20210602~20211130
 term_666_2=20211201~20220531
+term_666_12=20210602~20220531
 term_666_3=20220601~20221130
+
+term_774_12=20210602~20220731
+term_774_3=20220801~20221130
 
