--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -107,9 +107,6 @@ file_python_log_config=C:/Dev/workspace/Oxygen/py_boatrace/log_config.json
 
 file_python_log=C:/Dev/workspace/Oxygen/pod_boatrace_test/logs/python/{}.log
 
-#ヒストグラム分割
-file_histogram_values=C:/Dev/github/pod_boatrace/properties/expr10/histogram_values.properties
-
 # オッズを直前まで取得して直前オッズやオッズ予測が可能な開始日付(OddsMonitorManagerで使用)
 odds_monitoring_start_ymd=20210602
 
@@ -122,8 +119,9 @@ dataserver_simulation_grade='ip','G3','G2','G1','SG'
 bettype=1T,2T,3T,2F,3F
 
 # classification data 取得対象のmodelnoリスト
-dataserver_classification_models=99080,99083,99100,99102,99103,97080,97083,97100,97102,97103
-#dataserver_classification_models=99080,99083
+#dataserver_classification_models=99080,99100,97080,97100
+#dataserver_classification_models=99080,99100,99102,99103,97080,97100,97102,97103
+dataserver_classification_models=79100,99100
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
@@ -146,14 +144,21 @@ simulation_step=1
 stat_unit=bettype,prediction,pattern
 
 ##------------- simulation step 1 
-#MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test_FPI-6
-#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_selected/
-#dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store_test/
+#ヒストグラム分割  x=使用しない
+file_histogram_values=C:/Dev/github/pod_boatrace/properties/expr10/histogram_values.properties
+#file_histogram_values=x
 
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul4_4_FPI-5
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5/
-dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
+#FSB,GPTのsqlで<optional></optional>を含めるかの可否 yes,no (test_FSB(4)でyes利用)
+optional_sql=yes
+
+#MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test_FSB(4)
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/test_FSB(4)/
+dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store_test/
+
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul_FSB_GPT
+#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul_FSB_GPT/
+#dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
 # 選択したresultグラフファイルの格納先 EvaluationSimulLoaderResultGraphFilename
 dir_result_selected=D:/Dev/experiment/expr10/result_selected
@@ -162,8 +167,8 @@ dir_simul_selected=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_sele
 # 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
 # EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr 
 # or EvaluationSimulLoaderPtnId or EvaluationSimulLoaderResultGraphFilename
-# or EvaluationSimulLoaderFPI5GraphFilename
-evaluation_loader=EvaluationSimulLoaderPtnId
+# or EvaluationSimulLoaderFPI5GraphFilename or EvaluationSimulLoaderFPI7 or EvaluationSimulLoaderFPI8
+evaluation_loader=EvaluationSimulLoaderFSB
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
@@ -180,6 +185,11 @@ dir_groups_step2=D:/Dev/experiment/expr10/groups_step2/
 ######################### simulation end #####################################
 
 ############# シミュレーション項目preset
+# term_split=1の場合 5= probabilityとroddsrankの分布 6=probabilityとboddsrankの分布
+# term_split=2の場合 1=분할result 2=분할simulation(bork포함) 3=단일simulation
+#graph_type=6
+graph_type=4
+
 bork_min=1
 bork_max=30
 rork_min=1
@@ -199,17 +209,19 @@ graph_only_count_all=yes
 graph_only_pattern=yes
 
 
-# 2022/9/12 시계열 그래프를 베팅단위가 아닌 지정기간단위로 출력한다.
-# 1=분할result 2=분할simulation(bork포함) 3=단일simulation
-graph_type=2
-term_days_balance=30
-term_days_performance=30
+# bork등을 두개로 쪼갤것인가 여부 1=ResultGraphBuilder 2=ResultGraphBuilderSplit
+term_split=1
+
+term_days_balance=31
+term_days_performance=183
 #term_days_balance=15
 #term_days_performance=15
-term_split=2
 
+# graph出力対象の収益率範囲 min_incomerateを範囲に変えた（result_config#4161から）
+incomerate_range=0~99
 
 ############# simulation定義を簡略化する。 2022/8/5
+evaluations_id=x
 probability_type=digit1
 used_model_no=x
 split=1
@@ -234,8 +246,6 @@ prediction_selector=x
 min_betrate=0
 min_betcnt=0
 min_incomerate=0
-# min_incomerateを範囲に変えた（result_config#4161から）
-incomerate_range=1.01~99
 
 # 20221112追加
 factor=x
@@ -251,62 +261,86 @@ custom=x
 # 最終結果確認
 term_last=20210602~20221031
 
-term_842_1=20180601~20220131
-term_842_2=20210602~20220131
-term_842_3=20220201~20220531
-term_842_4=20220601~20220731
-
-term_833_1=20180601~20220131
-term_833_2=20210602~20220131
-term_833_3=20220201~20220430
-term_833_4=20220501~20220731
-
-term_662_1=20180601~20211130
-term_662_2=20210602~20211130
-term_662_3=20211201~20220531
-term_662_4=20220601~20220731
-
-term_555_0=20180601~20211031
-term_555_12=20210602~20220331
-term_555_3=20220401~20220830
-
-term_554_1=20180601~20211031
-term_554_2=20210602~20211031
-term_554_3=20211101~20220331
-term_554_4=20220401~20220731
-term_554_9=20210602~20220731
-
-
-term_999=20210602~20220731
-
-term_663_1=20210602~20211130
-term_663_2=20211201~20220531
-term_663_3=20220601~20220831
-
-term_1232_0=20180601~20210601
-term_1232_1=20210602~20220531
-term_1232_2=20220601~20220830
-term_1232_3=20220901~20221031
-term_1232_12=20210602~20220830
-term_1232_23=20220601~20221031
-term_1232_123=20210602~20221031
-
-term_1252_2=20220601~20221031
-
-term_8820=20180601~20210601
-term_882_1=20210602~20220131
-term_882_2=20220201~20220930
-term_882_3=20221001~20221130
-
+#term_842_1=20180601~20220131
+#term_842_2=20210602~20220131
+#term_842_3=20220201~20220531
+#term_842_4=20220601~20220731
+#
+#term_833_1=20180601~20220131
+#term_833_2=20210602~20220131
+#term_833_3=20220201~20220430
+#term_833_4=20220501~20220731
+#
+#term_662_1=20180601~20211130
+#term_662_2=20210602~20211130
+#term_662_3=20211201~20220531
+#term_662_4=20220601~20220731
+#
+#term_555_0=20180601~20211031
+#term_555_12=20210602~20220331
+#term_555_3=20220401~20220830
+#
+#term_554_1=20180601~20211031
+#term_554_2=20210602~20211031
+#term_554_3=20211101~20220331
+#term_554_4=20220401~20220731
+#term_554_9=20210602~20220731
+#
+#
+#term_999=20210602~20220731
+#
+#term_663_1=20210602~20211130
+#term_663_2=20211201~20220531
+#term_663_3=20220601~20220831
+#
+#term_1232_0=20180601~20210601
+#term_1232_1=20210602~20220531
+#term_1232_2=20220601~20220830
+#term_1232_3=20220901~20221031
+#term_1232_12=20210602~20220830
+#term_1232_23=20220601~20221031
+#term_1232_123=20210602~20221031
+#
+#term_1252_2=20220601~20221031
+#
+#term_8820=20180601~20210601
+#term_882_1=20210602~20220131
+#term_882_2=20220201~20220930
+#term_882_3=20221001~20221130
+#
 term_666_0=20180601~20210601
 term_666_1=20210602~20211130
 term_666_2=20211201~20220531
 term_666_12=20210602~20220531
+term_666_123=20210602~20221130
 term_666_3=20220601~20221130
+#sortingのために
+term_666_30=20220601~20221130
+#
+#term_774_12=20210602~20220731
+#term_774_3=20220801~20221130
+#
+#term_1442_1=20210602~20220731
+#term_1442_2=20220801~20221130
+#term_1442_3=20221201~20230131
+#
+#term_6662_0=20180601~20210601
+#term_6662_1=20210602~20211130
+#term_6662_2=20211201~20220531
+#term_6662_12=20210602~20220531
+#term_6662_3=20220601~20221130
+#term_6662_4=20221201~20230131
+#
+## bork존재기간만 대상
+#term_12332_0=20210602~20220531
+#term_12332_1=20220601~20220831
+#term_12332_2=20220901~20221130
+#term_12332_3=20221201~20230131
 
-term_774_12=20210602~20220731
+term_775_1=20210602~20211231
+term_775_2=20220101~20220731
 term_774_3=20220801~20221130
 
-term_1442_1=20210602~20220731
-term_1442_2=20220801~20221130
-term_1442_3=20221201~20230131
+term_1262_1=20210602~20220531
+term_1262_2=20220601~20221130
+
