--- a/properties/expr10/expr10_tmp.properties
+++ b/properties/expr10/expr10_tmp.properties
@@ -122,8 +122,8 @@ dataserver_simulation_grade='ip','G3','G2','G1','SG'
 bettype=1T,2T,3T,2F,3F
 
 # classification data 取得対象のmodelnoリスト
-dataserver_classification_models=99080,99083,99100,99102,99103,97080,97083,97100,97102,97103
-#dataserver_classification_models=99080,99083
+#dataserver_classification_models=99080,99083,99100,99102,99103,97080,97083,97100,97102,97103
+dataserver_classification_models=79100
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
