--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -1,4 +1,4 @@
-#直前オッズディレクトリ 2019/01/10～2020/06/03
+2#直前オッズディレクトリ 2019/01/10～2020/06/03
 #Deprecated DIRECTORY_ODDSBEFORE = C:/Dev/workspace/Oxygen/pod_boatrace_test/oddsbefore/
 #groupファイル格納先
 # simulation step 1
@@ -47,7 +47,7 @@ file_features=C:/Dev/github/pod_boatrace/properties/expr10/features.tsv
 
 #MLの実験定義ファイル(Excel) filepath#sheet
 # 이 설정값은 변경하지 말것 result_config.xlsx에만 정의할 것 (번호혼선 방지를 위해)
-file_result_config=C:/Dev/github/pod_boatrace/document/expr10/result_config.xlsx#result
+file_result_config=C:/Dev/github/pod_boatrace/document/expr10/st2/result_config.xlsx#result
 
 #MLのpattern定義ファイル
 file_pattern=C:/Dev/github/pod_boatrace/properties/expr10/pattern.tsv
@@ -112,7 +112,8 @@ odds_monitoring_start_ymd=20210602
 
 ############# rmi data server定義
 # simulationデータ提供対象期間
-dataserver_simulation_period=20180601~20221130
+#dataserver_simulation_period=20180601~20230420
+dataserver_simulation_period=20210602~20230531
 dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
@@ -121,7 +122,9 @@ bettype=1T,2T,3T,2F,3F
 # classification data 取得対象のmodelnoリスト
 #dataserver_classification_models=99080,99100,97080,97100
 #dataserver_classification_models=99080,99100,99102,99103,97080,97100,97102,97103
-dataserver_classification_models=79100,99100
+#dataserver_classification_models=99100,90100,90102,90103,70101,79101,70103
+#dataserver_classification_models=11402,13402
+dataserver_classification_models=99100,79101,11609,21609
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
@@ -141,7 +144,7 @@ simulation_step=1
 
 # ResultStatを生成する単位  bettype, prediction, pattern, unified
 #stat_unit=bettype
-stat_unit=bettype,prediction,pattern
+stat_unit=bettype,prediction,patternid,pattern
 
 ##------------- simulation step 1 
 #ヒストグラム分割  x=使用しない
@@ -149,16 +152,16 @@ file_histogram_values=C:/Dev/github/pod_boatrace/properties/expr10/histogram_val
 #file_histogram_values=x
 
 #FSB,GPTのsqlで<optional></optional>を含めるかの可否 yes,no (test_FSB(4)でyes利用)
-optional_sql=yes
+optional_sql=no
 
 #MLのシミュレーションtest定義ファイル(Excel) filepath#sheet
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_test.xlsx#test_FSB(4)
-dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/test_FSB(4)/
-dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store_test/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/st2/result_config.xlsx#simulation
+dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul_STA/
+dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
-#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/result_config6.xlsx#simul_FSB_GPT
-#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul_FSB_GPT/
-#dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
+#file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/st2/simul1_rank.xlsx#test_JSN_1
+#dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/test_JSN_1/
+#dir_groups_output_step1=D:/Dev/experiment/expr10/simulation_step1/test_JSN_1/groups/
 
 # 選択したresultグラフファイルの格納先 EvaluationSimulLoaderResultGraphFilename
 dir_result_selected=D:/Dev/experiment/expr10/result_selected
@@ -168,7 +171,7 @@ dir_simul_selected=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_sele
 # EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr 
 # or EvaluationSimulLoaderPtnId or EvaluationSimulLoaderResultGraphFilename
 # or EvaluationSimulLoaderFPI5GraphFilename or EvaluationSimulLoaderFPI7 or EvaluationSimulLoaderFPI8
-evaluation_loader=EvaluationSimulLoaderFSB
+evaluation_loader=EvaluationSimulLoaderJSJ
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
@@ -184,6 +187,12 @@ dir_groups_step2=D:/Dev/experiment/expr10/groups_step2/
 
 ######################### simulation end #####################################
 
+############# model 項目preset
+outlier_method=no
+outlier_field=sanrentanprize
+grade_condition='ip', 'G3', 'G2', 'G1', 'SG'
+
+
 ############# シミュレーション項目preset
 # term_split=1の場合 5= probabilityとroddsrankの分布 6=probabilityとboddsrankの分布
 # term_split=2の場合 1=분할result 2=분할simulation(bork포함) 3=단일simulation
@@ -191,14 +200,19 @@ dir_groups_step2=D:/Dev/experiment/expr10/groups_step2/
 graph_type=4
 
 bork_min=1
-bork_max=30
+bork_max=20
 rork_min=1
-rork_max=30
+rork_max=20
 pr_min=0.01
 pr_max=1
+#bork期間単位統計の期間分割数
+bork_term_max=10
 
+
+# 2023/4/2 group file 보존여부
+save_group=no
+save_graph=no
 save_stat=yes
-save_graph=yes
 save_result=no
 chart_size_x=700
 chart_size_y=700
@@ -221,8 +235,10 @@ term_days_performance=183
 incomerate_range=0~99
 
 ############# simulation定義を簡略化する。 2022/8/5
+limited_formation=no
+limited_kumiban=1234-*-*
 evaluations_id=x
-probability_type=digit1
+probability_type=default
 used_model_no=x
 split=1
 result_sql_id=s-all
@@ -258,8 +274,69 @@ model=x
 custom=x
 
 #期間定義 833_1=result_type 21, 833_2=result_type 22, 833_3=result_type 23, 
+term_66_1=20210602~20211130
+term_66_2=20211201~20220531
+term_66_R1=20220601~20221130
+term_66_R2=20221201~20230531
+term_66_T1=20220601~20220930
+term_66_T2=20221001~20230131
+term_66_T3=20230201~20230531
+
+
 # 最終結果確認
 term_last=20210602~20221031
+
+term_R2=20230201~20230310
+term_R3=20230311~20230420
+term_R23=20230201~20230420
+
+term_2y_12=20190602~20210601
+term_2y_R1=20210602~20211231
+term_2y_R2=20220101~20220731
+
+term_77_1=20210602~20211231
+term_77_2=20220101~20220731
+term_77_R=20220801~20230228
+term_77_R2=20230301~20230531
+term_77_12=20210602~20220731
+term_77_A=20210602~20230531
+term_77_123=20210602~20230228
+
+
+term_555_1=20210602~20211031
+term_555_2=20211101~20220331
+term_555_3=20220401~20220831
+term_555_R=20220901~20230131
+term_555_123=20210602~20220831
+
+term_15_1=20210602~20220831
+term_15_2=20220901~20230131
+
+#term_5_1=20220401~20220831
+#term_5_2=20220901~20230131
+#term_5_3=20230201~20230228
+#term_5_4=20230301~20230331
+
+#term_10_1=20210601~20220331
+#term_10_2=20220401~20230131
+#term_10_3=20230201~20230228
+#term_10_4=20230301~20230331
+
+#term_15_1=20200801~20211031
+#term_15_2=20211101~20230131
+#term_15_3=20230201~20230228
+#term_15_4=20230301~20230331
+
+#term_20_1=20191001~20210531
+#term_20_2=20210601~20230131
+#term_20_3=20230201~20230228
+#term_20_4=20230301~20230331
+
+#term_12_1=20210201~20220131
+#term_12_2=20220201~20230131
+#term_12_3=20230201~20230228
+#term_12_4=20230301~20230331
+
 
 #term_842_1=20180601~20220131
 #term_842_2=20210602~20220131
@@ -308,14 +385,6 @@ term_last=20210602~20221031
 #term_882_2=20220201~20220930
 #term_882_3=20221001~20221130
 #
-term_666_0=20180601~20210601
-term_666_1=20210602~20211130
-term_666_2=20211201~20220531
-term_666_12=20210602~20220531
-term_666_123=20210602~20221130
-term_666_3=20220601~20221130
-#sortingのために
-term_666_30=20220601~20221130
 #
 #term_774_12=20210602~20220731
 #term_774_3=20220801~20221130
@@ -337,10 +406,24 @@ term_666_30=20220601~20221130
 #term_12332_2=20220901~20221130
 #term_12332_3=20221201~20230131
 
-term_775_1=20210602~20211231
-term_775_2=20220101~20220731
-term_774_3=20220801~20221130
+#term_775_1=20210602~20211231
+#term_775_2=20220101~20220731
+#term_774_3=20220801~20221130
 
-term_1262_1=20210602~20220531
-term_1262_2=20220601~20221130
+#term_1262_1=20210602~20220531
+#term_1262_2=20220601~20221130
 
+factor_i0=i0
+factor_i1=i1
+factor_i2=i2
+factor_i02=i0+i1+i2
+factor_i04=i0+i1+i2+i3+i4
+factor_i14=i1+i2+i3+i4
+factor_tpc0=tpc0
+factor_tpc1=tpc1
+factor_tpc2=tpc2
+factor_tpc02=((tpc0+tpc1+tpc2)::float / (case when (tc0+tc1+tc2) = 0 then 1 else (tc0+tc1+tc2) end)::float)
+factor_tpc04=((tpc1+tpc2+tpc3+tpc4)::float / (case when (tc1+tc2+tc3+tc4) = 0 then 1 else (tc1+tc2+tc3+tc4) end)::float)
+factor_tpc14=((tpc1+tpc2+tpc3+tpc4)::float / (case when (tc1+tc2+tc3+tc4) = 0 then 1 else (tc1+tc2+tc3+tc4) end)::float)
+factor_i09=i0+i1+i2+i3+i4+i5+i6+i7+i8+i9
+factor_incrate=incrate
