--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//properties/expr10/expr10.properties=UTF-8
 encoding//release/properties/honmyo_1.properties=UTF-8
 encoding//release/properties/honmyo_2.properties=UTF-8
 encoding//release/properties/honmyo_3.properties=UTF-8
