--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -76,7 +76,7 @@ dir_model_release=C:/Dev/experiment/expr10/model_release/
 #実験結果ファイル格納先
 # expr10_result.tsv : 実験結果を累積する
 # 1_1_nopattern_3T_123.png : 実験番号1,model番号1,3T,123のgraph
-dir_result=D:/Dev/experiment/expr10/result/
+dir_result=F:/Dev/experiment/expr10/result/
 
 # sqlファイルをscanする対象ディレクトリ
 dir_sql=C:/Dev/github/pod_boatrace/properties/expr10/
@@ -105,7 +105,7 @@ file_model_info=C:/Dev/github/pod_boatrace/properties/expr10/model.properties
 # pythonサーバーlogging定義ファイル
 file_python_log_config=C:/Dev/github/py_boatrace/log_config.json
 
-file_python_log=C:/Dev/workspace/Oxygen/pod_boatrace_test/logs/python/{}.log
+file_python_log=C:/Dev/github/pod_boatrace_test/logs/python/{}.log
 
 # オッズを直前まで取得して直前オッズやオッズ予測が可能な開始日付(OddsMonitorManagerで使用)
 odds_monitoring_start_ymd=20210602
@@ -119,6 +119,7 @@ dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
 bettype=1T,2T,3T,2F,3F
+rankcnt=4
 
 # classification data 取得対象のmodelnoリスト
 #dataserver_classification_models=99080,99100,97080,97100
@@ -126,7 +127,7 @@ bettype=1T,2T,3T,2F,3F
 #dataserver_classification_models=99100,90100,90102,90103,70101,79101,70103
 #dataserver_classification_models=11402,13402
 #dataserver_classification_models=99100,79101,11609,21609
-dataserver_classification_models=99100,89100
+dataserver_classification_models=99100,89101,99101
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
