--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -119,7 +119,7 @@ dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
 bettype=1T,2T,3T,2F,3F
-rankcnt=4
+rankcnt=3
 
 # classification data 取得対象のmodelnoリスト
 #dataserver_classification_models=99080,99100,97080,97100
@@ -127,7 +127,7 @@ rankcnt=4
 #dataserver_classification_models=99100,90100,90102,90103,70101,79101,70103
 #dataserver_classification_models=11402,13402
 #dataserver_classification_models=99100,79101,11609,21609
-dataserver_classification_models=99100,89101,99101
+dataserver_classification_models=99100,89101,99101,99102
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
@@ -220,7 +220,7 @@ save_group=yes
 save_graph=yes
 save_stat=yes
 delete_saved_stat=yes
-save_result=no
+save_result=yes
 chart_size_x=700
 chart_size_y=700
 
