--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -220,7 +220,7 @@ save_group=yes
 save_graph=yes
 save_stat=yes
 delete_saved_stat=yes
-save_result=yes
+save_result=no
 chart_size_x=700
 chart_size_y=700
 
