--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -19,6 +19,8 @@
 # Deprecated websocket_url_weka=ws://localhost:8090
 
 kumiban_3T=123,124,125,126,132,134,135,136,142,143,145,146,152,153,154,156,162,163,164,165,213,214,215,216,231,234,235,236,241,243,245,246,251,253,254,256,261,263,264,265,312,314,315,316,321,324,325,326,341,342,345,346,351,352,354,356,361,362,364,365,412,413,415,416,421,423,425,426,431,432,435,436,451,452,453,456,461,462,463,465,512,513,514,516,521,523,524,526,531,532,534,536,541,542,543,546,561,562,563,564,612,613,614,615,621,623,624,625,631,632,634,635,641,642,643,645,651,652,653,654
+histogram_percents=5,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95
+
 # schedule.tsv (online処理)
 DIRECTORY_CSV = C:/Dev/workspace/Oxygen/pod_boatrace_test/csv/
 
@@ -202,8 +204,8 @@ grade_condition='ip', 'G3', 'G2', 'G1', 'SG'
 ############# シミュレーション項目preset
 # term_split=1の場合 5= probabilityとroddsrankの分布 6=probabilityとboddsrankの分布
 # term_split=2の場合 1=분할result 2=분할simulation(bork포함) 3=단일simulation
-#graph_type=6
-graph_type=4
+#graph_type=4
+graph_type=8
 
 bork_min=1
 bork_max=20
