--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -165,9 +165,9 @@ optional_sql=yes
 #dir_simul_output_step1=D:/Dev/experiment/expr10/simulation_step1/simul_STA/
 #dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
-file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/st2/bork_simulation_big.xlsx#test_VIC_BIG_2
-dir_simul_output_step1=D:/simul_step1/test/
-dir_groups_output_step1=D:/simul_step1/test/groups/
+file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/st2/result_config.xlsx#simulation
+dir_simul_output_step1=D:/simul_step1/simulation_season2/
+dir_groups_output_step1=D:/simul_step1/simulation_season2/groups/
 
 # 選択したresultグラフファイルの格納先 EvaluationSimulLoaderResultGraphFilename
 dir_result_selected=D:/Dev/experiment/expr10/result_selected
@@ -178,13 +178,16 @@ dir_simul_selected=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_sele
 # or EvaluationSimulLoaderPtnId or EvaluationSimulLoaderResultGraphFilename
 # or EvaluationSimulLoaderFPI5GraphFilename or EvaluationSimulLoaderFPI7 or EvaluationSimulLoaderFPI8 or EvaluationSimulTsvFileLoader
 # or EvaluationSimulLoaderBIG or EvaluationSimulLoaderBV or EvaluationStep2Loader
-evaluation_loader=EvaluationSimulLoaderBV
+# or EvaluationExcelLoader
+evaluation_loader=EvaluationExcelLoader
 
 # 20220914 x=EvaluationPatternMatcher  else=EvaluationPatternMatcher2(全patternid一致チェック)
 pattern_matcher=x
 
 #groupシミュレーションをexcelで定義
 file_group_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_group.xlsx#groups
+#evaluationをexcelからロード
+file_evaluations=C:/Dev/github/pod_boatrace/document/expr10/s2/evaluations.xlsx#evaluations
 
 ##------------- simulation step 2
 #MLのシミュレーション最終定義ファイル(Excel) filepath#sheet
@@ -268,6 +271,8 @@ range_selector=x
 bonus_pr=x
 bonus_bor=x
 bonus_bork=x
+bonus_ebor=x
+bonus_ebork=x
 bonus_borkbor=x
 model_selector=betcnt
 result_class_id=Default
@@ -289,6 +294,18 @@ bork_bor_convert=x
 model=x
 
 #期間定義 833_1=result_type 21, 833_2=result_type 22, 833_3=result_type 23, 
+term_s6_0=20210603~20230602
+term_s6_1=20210603~20211130
+term_s6_2=20211201~20220602
+term_s6_3=20220603~20221130
+term_s6_4=20221201~20230602
+term_s2_0=20230603~20240202
+term_s2_1=20230603~20230802
+term_s2_2=20230803~20231002
+term_s2_3=20231003~20231202
+term_s2_4=20231203~20240202
+term_slast=20240203~20240426
+
 term_L1=20230901~20231015
 term_L2=20231016~20231115
 
