--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -19,10 +19,11 @@
 # Deprecated websocket_url_weka=ws://localhost:8090
 
 kumiban_3T=123,124,125,126,132,134,135,136,142,143,145,146,152,153,154,156,162,163,164,165,213,214,215,216,231,234,235,236,241,243,245,246,251,253,254,256,261,263,264,265,312,314,315,316,321,324,325,326,341,342,345,346,351,352,354,356,361,362,364,365,412,413,415,416,421,423,425,426,431,432,435,436,451,452,453,456,461,462,463,465,512,513,514,516,521,523,524,526,531,532,534,536,541,542,543,546,561,562,563,564,612,613,614,615,621,623,624,625,631,632,634,635,641,642,643,645,651,652,653,654
-histogram_percents=5,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95
+histogram_percents=0,5,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100
+#histogram_percents=0,10,20,30,40,50,60,70,80,90,100
 
 # schedule.tsv (online処理)
-DIRECTORY_CSV = C:/Dev/workspace/Oxygen/pod_boatrace_test/csv/
+DIRECTORY_CSV = C:/boatrace/offline/data/csv/
 
 #確定オッズ 2010/1/1～
 DIRECTORY_ODDS = C:/boatrace/offline/data/odds/
@@ -78,7 +79,7 @@ dir_model_release=C:/Dev/experiment/expr10/model_release/
 #実験結果ファイル格納先
 # expr10_result.tsv : 実験結果を累積する
 # 1_1_nopattern_3T_123.png : 実験番号1,model番号1,3T,123のgraph
-dir_result=F:/Dev/experiment/expr10/result/
+dir_result=E:/Dev/experiment/expr10/result/
 
 # sqlファイルをscanする対象ディレクトリ
 dir_sql=C:/Dev/github/pod_boatrace/properties/expr10/
@@ -110,18 +111,18 @@ file_python_log_config=C:/Dev/github/py_boatrace/log_config.json
 file_python_log=C:/Dev/github/pod_boatrace_test/logs/python/{}.log
 
 # オッズを直前まで取得して直前オッズやオッズ予測が可能な開始日付(OddsMonitorManagerで使用)
-odds_monitoring_start_ymd=20210602
+odds_monitoring_start_ymd=20210603
 
 ############# rmi data server定義
 # simulationデータ提供対象期間
 #dataserver_simulation_period=20180601~20230420
 #dataserver_simulation_period=20200602~20231004
-dataserver_simulation_period=20210603~20211231
+dataserver_simulation_period=20210603~20241031
 dataserver_simulation_grade='ip','G3','G2','G1','SG'
 
 # オッズ提供対象bettype
 bettype=1T,2T,3T,2F,3F
-rankcnt=3
+rankcnt=4
 
 # classification data 取得対象のmodelnoリスト
 #dataserver_classification_models=99080,99100,97080,97100
@@ -129,7 +130,7 @@ rankcnt=3
 #dataserver_classification_models=99100,90100,90102,90103,70101,79101,70103
 #dataserver_classification_models=11402,13402
 #dataserver_classification_models=99100,79101,11609,21609
-dataserver_classification_models=99100,89101,99101,99102
+dataserver_classification_models=20022
 
 # rmi接続情報
 dataserver.rmi.url=rmi://localhost:51761/boatml
@@ -149,8 +150,8 @@ simulation_step=1
 dir_groups_step1=D:/simul_TSV/groups_test/
 
 # ResultStatを生成する単位  bettype, prediction, pattern, unified
-#stat_unit=bettype,prediction
 stat_unit=bettype,prediction,patternid,pattern
+#stat_unit=bettype,prediction,patternid,pattern
 
 ##------------- simulation step 1 
 #ヒストグラム分割  x=使用しない
@@ -166,12 +167,12 @@ optional_sql=yes
 #dir_groups_output_step1=D:/Dev/experiment/expr10/work/groups_store/
 
 file_simul_config_step1=C:/Dev/github/pod_boatrace/document/expr10/st2/result_config.xlsx#simulation
-dir_simul_output_step1=D:/simul_step1/simulation_season2/
-dir_groups_output_step1=D:/simul_step1/simulation_season2/groups/
+dir_simul_output_step1=E:/simul_step1/simulation_season2/
+dir_groups_output_step1=E:/simul_step1/simulation_season2/groups/
 
 # 選択したresultグラフファイルの格納先 EvaluationSimulLoaderResultGraphFilename
-dir_result_selected=D:/Dev/experiment/expr10/result_selected
-dir_simul_selected=D:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_selected/
+dir_result_selected=E:/Dev/experiment/expr10/result_selected
+dir_simul_selected=E:/Dev/experiment/expr10/simulation_step1/simul4_4_FPI-5_selected/
 
 # 20220914 EvaluationFileLoader or EvaluationSimul2Loader or 
 # EvaluationSimulExcelLoader or EvaluationSimulLoaderBork or EvaluationSimulLoaderPr 
@@ -187,7 +188,7 @@ pattern_matcher=x
 #groupシミュレーションをexcelで定義
 file_group_config_step1=C:/Dev/github/pod_boatrace/document/expr10/simul1_group.xlsx#groups
 #evaluationをexcelからロード
-file_evaluations=C:/Dev/github/pod_boatrace/document/expr10/s2/evaluations.xlsx#evaluations
+file_evaluations=C:/Dev/github/pod_boatrace/document/expr10/st2/evaluations.xlsx#evaluations
 
 ##------------- simulation step 2
 #MLのシミュレーション最終定義ファイル(Excel) filepath#sheet
@@ -210,7 +211,7 @@ grade_condition='ip', 'G3', 'G2', 'G1', 'SG'
 #graph_type=4
 graph_type=8
 
-bork_min=1
+bork_min=2
 bork_max=20
 rork_min=1
 rork_max=20
@@ -257,16 +258,17 @@ custom=%wk%
 limited_formation=no
 limited_kumiban=1234-*-*
 evaluations_id=x
-probability_type=default
+probability_type=d1234
+expect_type=d123
 used_model_no=x
 split=1
 result_sql_id=s-all
 groups=0
 pattern_id=x
 # count or literal
-pattern_type=count
+pattern_type=literal
 # mod, ptid, ptn, mod+ptid
-pattern_fields=mod+ptid
+pattern_fields=mod+ptid+ptn
 range_selector=x
 bonus_pr=x
 bonus_bor=x
@@ -294,6 +296,7 @@ bork_bor_convert=x
 model=x
 
 #期間定義 833_1=result_type 21, 833_2=result_type 22, 833_3=result_type 23, 
+term_s62_0=20210603~20240202
 term_s6_0=20210603~20230602
 term_s6_1=20210603~20211130
 term_s6_2=20211201~20220602
@@ -305,6 +308,8 @@ term_s2_2=20230803~20231002
 term_s2_3=20231003~20231202
 term_s2_4=20231203~20240202
 term_slast=20240203~20240426
+term_s21_0=20230603~20240426
+
 
 term_L1=20230901~20231015
 term_L2=20231016~20231115
