탕정 작업 반영

--- a/properties/expr10/expr10.properties
+++ b/properties/expr10/expr10.properties
@@ -1,4 +1,4 @@
-2#直前オッズディレクトリ 2019/01/10～2020/06/03
+#直前オッズディレクトリ 2019/01/10～2020/06/03
 #Deprecated DIRECTORY_ODDSBEFORE = C:/Dev/workspace/Oxygen/pod_boatrace_test/oddsbefore/
 #groupファイル格納先
 # simulation step 1
@@ -19,6 +19,7 @@
 # Deprecated websocket_url_weka=ws://localhost:8090
 
 kumiban_3T=123,124,125,126,132,134,135,136,142,143,145,146,152,153,154,156,162,163,164,165,213,214,215,216,231,234,235,236,241,243,245,246,251,253,254,256,261,263,264,265,312,314,315,316,321,324,325,326,341,342,345,346,351,352,354,356,361,362,364,365,412,413,415,416,421,423,425,426,431,432,435,436,451,452,453,456,461,462,463,465,512,513,514,516,521,523,524,526,531,532,534,536,541,542,543,546,561,562,563,564,612,613,614,615,621,623,624,625,631,632,634,635,641,642,643,645,651,652,653,654
+
 histogram_percents=0,5,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100
 #histogram_percents=0,10,20,30,40,50,60,70,80,90,100
 
@@ -62,7 +63,7 @@ file_strategy=C:/Dev/github/pod_boatrace/properties/expr10/strategy.tsv
 file_featureset=C:/Dev/github/pod_boatrace/properties/expr10/featureset.tsv
 
 #java実行時のクラスパス
-classpath=C:/Dev/workspace/Oxygen/pod_boatrace_test/lib/weka.jar;C:/Dev/github/pod_boatrace/target/classes;
+classpath=C:/Dev/github/pod_boatrace_test/lib/weka.jar;C:/Dev/github/pod_boatrace/target/classes;
 
 target_db_resource=mybatis-config.0.xml
 
@@ -79,7 +80,7 @@ dir_model_release=C:/Dev/experiment/expr10/model_release/
 #実験結果ファイル格納先
 # expr10_result.tsv : 実験結果を累積する
 # 1_1_nopattern_3T_123.png : 実験番号1,model番号1,3T,123のgraph
-dir_result=E:/Dev/experiment/expr10/result/
+dir_result=C:/Dev/experiment/expr10/result/
 
 # sqlファイルをscanする対象ディレクトリ
 dir_sql=C:/Dev/github/pod_boatrace/properties/expr10/
